@@ -1,5 +1,7 @@
 2004-04-03  Ulrich Drepper  <drepper@redhat.com>
 
+	* sysdeps/powerpc/powerpc64/ffsll.c: New file.
+
 	* string/test-ffs.c: Also test ffsl and ffsll.
 
 	* sysdeps/powerpc/ffs.c: Don't define ffsl for ppc64.
@@ -8,7 +10,7 @@
 	constraints for asm mem parameters.
 	* sysdeps/powerpc/bits/atomic.h: Likewise.
 
-	* sysdeps/powerpc/elf/libc-start.c: no need for a separate
+	* sysdeps/powerpc/elf/libc-start.c: No need for a separate
 	function for __aux_init_cache.
 
 	* inet/test-ifaddrs.c: Fight warnings.
